--- a/international.html
+++ b/international.html
@@ -6,18 +6,18 @@
     <title>Rugby Ranker</title>
     <style>
         .headers {
-            margin-left: 5%;
+            margin-left: 1.5vw;
             height: auto;
             width: auto;
             font-family: 'Times New Roman', Times, serif;
-            font-size: 25px;
+            font-size: 2.2vw;
             font-weight: bold;
             color: #c1d8f0;
         }
 
         .flags {
             border: 1px solid #4663ac;
-            border-radius: 10px;
+            border-radius: 1vw;
             height:fit-content;
             width: fit-content;
             display: flex;
@@ -25,33 +25,33 @@
             align-content: center;
             margin-left: auto;
             margin-right: auto;
-            margin-top: 10px;
+            margin-top: 1vw;
             background-color: #c1d8f0;
-            width: 25%;
+            width: 50vw;
         }
 
         .flag {
-            height: 30px;
-            width: 30px;
+            height: 3vw;
+            width: 3vw;
             margin: auto;
-            margin-right: 5px;
+            margin-right: 0.5vw;
         }
 
         h2 {
             margin: auto;
-            margin-left: 5px;
+            margin-left: 0.5vw;
             font-family: 'Times New Roman', Times, serif;
-            font-size: 30px;
+            font-size: 3vw;
             
         }
     </style>
 </head>
 <body style = "padding-top: 0%; margin-top: 0px; margin-left: 0px; margin-right: 0px; 
                 background-color: #e1f1fd; align-items: center; display: contents">
-    <div style= "display: flex; background-color: #4663ac; display: flex; padding: 5px">
-        <div style = "display: flex; padding: 5px; align-content: center; height: auto;">
-            <img style = "height: 65px; width: 65px; margin-right: 5px;" src = "flags/rugby logo.png">
-            <h1 style = "font-family: 'Times New Roman', Times, serif; font-size: 50px; margin-top: 0px;
+    <div style= "display: flex; background-color: #4663ac; display: flex;">
+        <div style = "display: flex; padding: 0.5vw; align-content: center; height: auto;">
+            <img style = "height: 4vw; width: 4vw; margin-right: 0.5vw;" src = "flags/rugby logo.png">
+            <h1 style = "font-family: 'Times New Roman', Times, serif; font-size: 3.7vw; margin-top: 0px;
                         margin-bottom: 0px; color: #c1d8f0;">
                 Rugby Predictor
             </h1>
@@ -64,14 +64,14 @@
             <a class = "headers">Major League Rugby</a>
         </div>
     </div>
-    <div style = "display: grid; margin: auto; margin-top: 10px;">
+    <div style = "display: grid; margin: auto; margin-top: 1vw;">
         <h1 style = "margin-left: auto; margin-right: auto; align-self: center; font-family: 
-                    'Times New Roman', Times, serif; font-size: 60px; margin-top: 0px; margin-bottom: 0px;
-                    font-weight: bolder; margin-bottom: 0%;">
+                    'Times New Roman', Times, serif; font-size: 8vw; margin-top: 0px; margin-bottom: 0px;
+                    font-weight: bolder; margin-bottom: 0px;">
             International
         </h1>
-        <br>
-        <a style = "margin-left: auto; margin-right: auto; margin-top: 0px; ">
+        <br style = "background-color: gray; height: 0px; margin-top: 0px; margin-bottom: 0px;">
+        <a style = "margin-left: auto; margin-right: auto; margin-top: 0px; font-size: 2vw;">
             Updated: 25 September 2023
         </a>
     </div>
@@ -180,8 +180,8 @@
     </div>
 </body>
 <footer style = "margin: auto; margin-bottom: 0px; text-align: center;">
-    <hr>
-    <a>Powered by Ghost Software Productions</a>
-    <hr>
+    <hr style = "margin-bottom: 0px;">
+    <a style = "font-size: 2.5vw; margin-top: 0px; padding: 0px;">Powered by Ghost Software Productions</a>
+    <hr style = "margin-top: 0px;">
 </footer>
 </html>
