--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rugby Ranker</title>
     <style>
+        h1 {
+            font-family: 'Times New Roman', Times, serif; 
+            font-size: 3.7vw; 
+            margin-top: 0px;
+            margin-bottom: 0px; 
+            color: #c1d8f0;
+        }
+
         .headers {
-            margin-left: 5%;
+            margin-left: 1.5vw;
             height: auto;
             width: auto;
             font-family: 'Times New Roman', Times, serif;
-            font-size: 25px;
+            font-size: 2.2vw;
             font-weight: bold;
             color: #c1d8f0;
         }
@@ -18,25 +26,24 @@
 </head>
 <body style = "padding-top: 0%; margin-top: 0px; margin-left: 0px; margin-right: 0px; 
                 background-color: #e1f1fd; align-items: center; display: contents">
-    <div style= "display: flex; background-color: #4663ac; display: flex; padding: 5px">
-        <div style = "display: flex; padding: 5px; align-content: center; height: auto;">
-            <img style = "height: 65px; width: 65px; margin-right: 5px;" src = "flags/rugby logo.png">
-            <h1 style = "font-family: 'Times New Roman', Times, serif; font-size: 50px; margin-top: 0px;
-                        margin-bottom: 0px; color: #c1d8f0;">
+    <div style= "display: flex; background-color: #4663ac; display: flex;">
+        <div style = "display: flex; padding: 0.5vw; align-content: center; height: auto;">
+            <img style = "height: 4vw; width: 4vw; margin-right: 0.5vw;" src = "flags/rugby logo.png">
+            <h1>
                 Rugby Predictor
             </h1>
         </div>
         <div style = "display: flex; align-content: center; align-items: center; margin-right: auto; 
                      margin-left: 6%; width: 60%; padding: auto;">
-            <a class = "headers" style = "margin-left: 0%;" href="international.html">International</a>
+            <a class = "headers" style = "margin-left: 0px;" href="international.html">International</a>
             <a class = "headers">URC</a>
             <a class = "headers">Super Rugby</a>
             <a class = "headers">Major League Rugby</a>
         </div>
     </div>
-    <div style = "background-color: #c1d8f0; width: 50%; margin-left: 25%; margin-right: 25%; margin-top: 2%;
+    <div style = "background-color: #c1d8f0; width: 70vw; margin-left: 15%; margin-right: 15%; margin-top: 2%;
                     margin-bottom: 2%; border: 3px solid #4663ac; border-radius: 20px;">
-        <p style = "justify-content: baseline; font-size: 20px; margin-left: 5%; margin-right: 5%; 
+        <p style = "justify-content: baseline; font-size: 2.4vw; margin-left: 5%; margin-right: 5%; 
                     font-family: 'Times New Roman', Times, serif;">
             Powered by Ghost Software Productions. Based on their own ranking system, 
             Rugby Predictor ranks rugby teams according to power points, that gets updated after every round of rugby
@@ -46,8 +53,8 @@
     </div>
 </body>
 <footer style = "margin: auto; margin-bottom: 0px; text-align: center;">
-    <hr>
-    <a>Powered by Ghost Software Productions</a>
-    <hr>
+    <hr style = "margin-bottom: 0px;">
+    <a style = "font-size: 2.5vw; margin-top: 0px; padding: 0px;">Powered by Ghost Software Productions</a>
+    <hr style = "margin-top: 0px;">
 </footer>
 </html>
