--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
 </body>
 <footer style = "margin: auto; margin-bottom: 0px; text-align: center;">
     <hr style = "margin-bottom: 0px;">
-    <a style = "font-size: 2.5vw; margin-top: 0px; padding: 0px;">Powered by Ghost Software Productions</a>
+    <a href = "https://ghost-software-productions.github.io/GhostSoftwareProductions/index.html" 
+                style = "font-size: 2.5vw; margin-top: 0px; padding: 0px; text-decoration: none; color: black">
+        Powered by Ghost Software Productions
+    </a>
     <hr style = "margin-top: 0px;">
 </footer>
 </html>
