--- a/international.html
+++ b/international.html
@@ -81,7 +81,7 @@
             <img class = "flag" src="flags/New Zealand.png">
             <h2>New Zealand: 88.62</h2>
         </div>
-        <div class = "flags" style = "margin-top: 0%;">
+        <div class = "flags">
             <img class = "flag" src="flags/france.png">
             <h2>France: 80.81</h2>
         </div>
